--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
+    "openssl": "^2.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "20.11.16",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
