--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/app/Login/page.jsx", "src/app/components/LoginForm.jsx", "src/app/components/LogoutButton.jsx"  ],
   "exclude": [
     "node_modules"
   ]
